--- a/Tipped!/AndroidManifest.xml
+++ b/Tipped!/AndroidManifest.xml
@@ -34,7 +34,9 @@
         <activity
             android:name="com.pcpsoftware.tipped.Options"
             android:label="@string/app_name"></activity>
-        <activity android:name="com.pcpsoftware.tipped.TipEdit"></activity>
+        <activity 
+            android:name="com.pcpsoftware.tipped.TipEdit"
+            android:label="@string/app_name"></activity>
     </application>
 
 </manifest>
